--- a/index.html
+++ b/index.html
@@ -148,22 +148,13 @@
         }
         #srv-mini:hover{ transform: translateY(-1px); box-shadow: 0 4px 16px rgba(0,0,0,.15); }
 
-       /* 차트를 컨테이너 안쪽으로 살짝 줄여서 배지/버튼과 간격 확보 */
+        /* 차트: 컨테이너 100% 꽉 채우기 (버튼은 위에서 겹침) */
         #srv-mini-chart{
-        position: absolute;
-        /* top | right | bottom | left */
-        top: 26px; right: 14px; bottom: 28px; left: 14px;
-        width: auto; height: auto;   /* inset 기준으로 자동 계산 */
+        position: absolute; inset: 0;   /* top/right/bottom/left 0 */
+        width: 100%; height: 100%;
         z-index: 1;
-        border-radius: 10px;          /* 모서리 부딪힘 방지용(옵션) */
-        overflow: hidden;
-        }
-
-        /* 모바일은 여백을 조금 더 줘서 눌림 방지 */
-        @media (max-width: 980px){
-        #srv-mini-chart{
-            top: 30px; right: 12px; bottom: 32px; left: 12px;
-        }
+        /* 어떤 브라우저에서도 0으로 안 떨어지게 */
+        min-width: 100%; min-height: 100%;
         }
 
         /* 우하단 버튼은 차트 위, 배지 아래 */
