--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         position: absolute; inset: 0;   /* top/right/bottom/left 0 */
         width: 100%; height: 100%;
         z-index: 1;
-        /* 어떤 브라우저에서도 0으로 안 떨어지게 */
+        /* 안전빵: 어떤 브라우저에서도 0으로 안 떨어지게 */
         min-width: 100%; min-height: 100%;
         }
 
@@ -253,6 +253,8 @@
         position: absolute; inset: 0;
         width: 100%; height: 100%;
         z-index: 1;
+        /* 안전빵: 어떤 브라우저에서도 0으로 안 떨어지게 */
+        min-width: 100%; min-height: 100%;
         }
 
     </style>
