--- a/index.html
+++ b/index.html
@@ -516,13 +516,22 @@
                 </div>
             </div>
 
-            <div id="srv-mini">
+            <!-- <div id="srv-mini">
                 <div id="srv-mini-chart" aria-hidden="true"></div>
                 <span class="detail-button"
                         onclick="window.open('https://hkk-it.kro.kr/health/dashboard','_blank','noopener,noreferrer')"
                         aria-label="상세확인">상세확인</span>
                 <div id="srv-status" class="status-badge">--</div>
+            </div> -->
+            <div id="srv-mini">
+                <div id="srv-mini-chart" aria-hidden="true"></div>
+                <span class="detail-button"
+                        onclick="window.open('https://hkk-it.kro.kr/health/dashboard','_blank','noopener,noreferrer')"
+                        aria-label="상세확인">상세확인</span>
             </div>
+
+                <!-- ✅ 위젯 바깥으로 이동 -->
+            <div id="srv-status" class="status-badge">--</div>
 
 
             <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
