--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                 const cls  = classify(v);
                 const icon = cls==='ok'?'●':cls==='warn'?'⚠':'●';
                 const text = cls==='ok'?'정상':cls==='warn'?'주의':'위험';
-                badge.className = 'status-badge ' + (cls==='ok'?'status-ok':cls==='warn'?'status-warn':'status-bad');
+                badge.className = 'status-badge.  ' + (cls==='ok'?'status-ok':cls==='warn'?'status-warn':'status-bad');
                 badge.textContent = `${icon} ${text} CPU${v.cpu} % MEM${v.mem} % DISK${v.disk} %`;
             }
 
