--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                 const icon = cls==='ok'?'●':cls==='warn'?'⚠':'●';
                 const text = cls==='ok'?'정상':cls==='warn'?'주의':'위험';
                 badge.className = 'status-badge  ' + (cls==='ok'?'status-ok':cls==='warn'?'status-warn':'status-bad');
-                badge.textContent = `${icon} ${text} CPU${v.cpu} % MEM${v.mem} % DISK${v.disk} %`;
+                badge.textContent = `${icon} ${text} CPU ${v.cpu}% MEM ${v.mem}% DISK ${v.disk}%`;
             }
 
             async function reload(){
@@ -886,7 +886,7 @@
             <h2>Professional Summary</h2>
             <div class="summary-content">
                 "늘 도전하는 정신으로 새로운 기술과 환경을 받아들이며,<br>
-                안정적이고 확장성 있는 IT 시스템을 구축·운영해온 시스템 엔지니어"
+                안정적이고 성장성 있는 IT 시스템을 구축·운영해온 시스템 엔지니어"
             </div>
             <div class="experience-badges">
                 <span class="badge badge-abc">ABCmart Korea · 2년</span>
