--- a/index.html
+++ b/index.html
@@ -900,27 +900,27 @@
             <div class="impact-grid">
                 <div class="impact-item">
                     <div class="impact-title">O4O 통합 플랫폼 구축</div>
-                    <div class="impact-result">→ 330개 매장 온오프라인 연동 (일평균 200건 주문 증가)</div>
+                    <div class="impact-result">→ 330개 매장 온오프라인 연동 <br>&nbsp;&nbsp;&nbsp;&nbsp;(일평균 200건 주문 증가)</div>
                 </div>
                 <div class="impact-item">
                     <div class="impact-title">사내 직원 APP 차세대 프로젝트</div>
-                    <div class="impact-result">→ 일 2,100명 사용 앱 마이그레이션 및 신규기능 기획 및 구축</div>
+                    <div class="impact-result">→ 일 2,100명 사용 앱 마이그레이션 및<br>&nbsp;&nbsp;&nbsp;&nbsp;신규기능 기획 및 구축</div>
                 </div>
                 <div class="impact-item">
                     <div class="impact-title">전국 매장 전자가격표 시스템 구축</div>
-                    <div class="impact-result">→ 가격 반영 실시간</div>
+                    <div class="impact-result">→ 실시간 가격 반영 인프라 기획 및 구축</div>
                 </div>
                 <div class="impact-item">
-                    <div class="impact-title">GSMA SASUP 보안심사 통과</div>
-                    <div class="impact-result">→ 국제 보안 표준 충족 및 서비스 신뢰성 강화</div>
+                    <div class="impact-title">GSMA SAS-UP 보안심사 2회 통과</div>
+                    <div class="impact-result">→ 국제 보안 표준 충족 및 서비스 신뢰성 <br>&nbsp;&nbsp;&nbsp;&nbsp;강화</div>
                 </div>
                 <div class="impact-item">
                     <div class="impact-title">차세대 백업 시스템 구축</div>
-                    <div class="impact-result">→ 백업 시간 67% 단축 및 시스템 안정화</div>
+                    <div class="impact-result">→ 백업 시간 67% 단축 및 DR 구성</div>
                 </div>
                 <div class="impact-item">
                     <div class="impact-title">CI/CD 자동화 환경 구축</div>
-                    <div class="impact-result">→ 개발 생산성 증대 (Gitlab CI 코드 빌드 및 검증, Jenkins 애플리케이션 자동 배포)</div>
+                    <div class="impact-result">→ 개발 생산성 증대 <br>&nbsp;&nbsp;&nbsp;&nbsp;(Gitlab 코드 빌드/검증, Jenkins 자동<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;배포)</div>
                 </div>
             </div>
         </section>
@@ -935,6 +935,7 @@
                         <span class="tech-tag">Windows Server</span>
                         <span class="tech-tag">Linux (CentOS/Ubuntu)</span>
                         <span class="tech-tag">VMware vSphere/ESXi</span>
+                        <span class="tech-tag">AWS EC2</span>
                     </div>
                 </div>
                 <div class="tech-category">
@@ -965,6 +966,7 @@
                     <h3>Development</h3>
                     <div class="tech-list">
                         <span class="tech-tag">Python</span>
+                        <span class="tech-tag">Git</span>
                     </div>
                 </div>
                 <div class="tech-category">
@@ -993,7 +995,7 @@
                     <div class="project-content">
                         <div class="project-description">
                             <strong>연매출 57억 증가 달성</strong><br>
-                            330개 매장 온·오프라인 재고 통합 플랫폼 구축
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;330개 매장 온·오프라인 재고 통합 플랫폼 구축
                             <ul>
                                 <li>DB 스키마 및 저장 프로시져 설계/구현</li>
                                 <li>고객/직원 알림톡 연동 모듈 구현</li>
@@ -1026,7 +1028,7 @@
                     <div class="project-content">
                         <div class="project-description">
                             <strong>사내 2,100명 사용자 편의성 개선</strong><br>
-                            재고 관리 시스템 고도화 프로젝트 리드
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;재고 관리 시스템 고도화 프로젝트 리드
                             <ul>
                                 <li>재고 로케이션·요청 모듈 신규 설계·개발</li>
                                 <li>DB 쿼리 구조 재설계 및 성능 최적화</li>
@@ -1062,7 +1064,7 @@
                             <strong>전자가격표 시스템 아키텍처 설계 및 구축</strong>
                             <ul>
                                 <li>실시간 가격 조정 체계 설계 및 적용</li>
-                                <li>인프라 아키텍처 설계 / DB 최적화</li>
+                                <li>인프라 아키텍처 설계 / DB 인덱스 최적화</li>
                             </ul>
                         </div>
                         <div class="project-techs">
@@ -1139,6 +1141,7 @@
                             <ul>
                                 <li>백업·복구 시간을 대폭 단축(67%)</li>
                                 <li>DR 환경 고도화로 데이터 안정성과 업무 연속성 확보</li>
+                                <li>서버 블록단위 증분백업 체계 구축</li>
                             </ul>
                         </div>
                     </div>
@@ -1146,7 +1149,7 @@
 
                 <div class="project-item">
                     <div class="project-header">
-                        <div class="project-title">인프라 모니터링 시스템 구축</div>
+                        <div class="project-title">인프라 시스템 구축</div>
                         <div class="project-meta">
                             <span class="project-period">2020.12 ~ 2021.02 (3개월)</span>
                             <span class="project-company company-doosan">두산테스나</span>
@@ -1154,11 +1157,16 @@
                     </div>
                     <div class="project-content">
                         <div class="project-description">
-                            <strong>신규 Zabbix 서버 구축 및 고도화</strong>
+                            <strong>Zabbix 모니터링 서버 구축 및 고도화</strong>
                             <ul>
                                 <li>네트워크/서버 모니터링 템플릿 설계/구축</li>
                                 <li>장애 발생 시 SMS 알림 시스템 구축</li>
                                 <li>Grafana 연동, 실시간 시각화 대시보드 구현</li>
+                            </ul>
+                            <strong><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CI/CD 자동화 파이프라인 구축</strong>
+                            <ul>
+                                <li>Gitlab CI 기반 코드 빌드/검증 자동화 환경 구축</li>
+                                <li>Jenkins 기반 애플리케이션 무중단 배포 자동화 구현</li>
                             </ul>
                         </div>
                         <div class="project-techs">
@@ -1171,6 +1179,8 @@
                         <div class="project-results">
                             <ul>
                                 <li>실시간 장애 감지·알림 체계 구축 및 시각화 대시보드 인프라 가시성 및 대응 속도 강화</li>
+                                <li>Process Trigger 기반 알림 체계로 장애 발생 시 즉각 대응 가능</li>
+                                <li>배포 자동화로 개발 테스트 변경 사항 신속 반영</li>
                             </ul>
                         </div>
                     </div>
