--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,10 @@
                                 <li>Gitlab CI 기반 코드 빌드/검증 자동화 환경 구축</li>
                                 <li>Jenkins 기반 애플리케이션 무중단 배포 자동화 구현</li>
                             </ul>
+                            <strong><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;신규 사옥 네트워크 인프라 설계/구축</strong>
+                            <ul>
+                                <li>L2 스위치 기반 VLAN 분할 및 IP 대역 설계/포설 총괄</li>
+                            </ul>
                         </div>
                         <div class="project-techs">
                             <span class="tech-item">Linux</span>
@@ -1181,6 +1185,7 @@
                                 <li>실시간 장애 감지·알림 체계 구축 및 시각화 대시보드 인프라 가시성 및 대응 속도 강화</li>
                                 <li>Process Trigger 기반 알림 체계로 장애 발생 시 즉각 대응 가능</li>
                                 <li>배포 자동화로 개발 테스트 변경 사항 신속 반영</li>
+                                <li>보안성/확장성 고려한 네트워크 구성으로 관리 효율성 확보</li>
                             </ul>
                         </div>
                     </div>
