--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
                             </ul>
                             <strong><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;신규 사옥 네트워크 인프라 설계/구축</strong>
                             <ul>
-                                <li>L2 스위치 기반 VLAN 분할 및 IP 대역 설계/포설 총괄</li>
+                                <li>L2 스위치 기반 VLAN 분할 및 IP 대역 설계/포설</li>
                             </ul>
                         </div>
                         <div class="project-techs">
