--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;재고 관리 시스템 고도화 프로젝트 리드
                             <ul>
                                 <li>재고 로케이션·요청 모듈 신규 설계·개발</li>
-                                <li>DB 쿼리 구조 재설계 및 성능 최적화</li>
+                                <li>DB 프로시저 설계 및 성능 최적화</li>
                                 <li>통합 테스트 주도 및 데이터 무결성 검증</li>
                             </ul>
                         </div>
@@ -1127,7 +1127,7 @@
                         <div class="project-description">
                             <strong>백업시간 67% 단축, RPO 1일 → 1시간 개선</strong>
                             <ul>
-                                <li>백업 정책 재수립 및 백업스케줄링 최적화</li>
+                                <li>백업 정책 재수립 및 백업 스케줄링 최적화</li>
                                 <li>소산백업 및 DR 환경 설계·구축, 재해복구 체계 강화</li>
                             </ul>
                         </div>
