--- a/index.html
+++ b/index.html
@@ -701,13 +701,13 @@
             </div>
         </div>
 
-        <div id="srv-mini">
+        <!-- <div id="srv-mini">
             <div class="chart-mini-title">Server Monitor</div>
             <span class="detail-button" onclick="window.open('https://hkk-it.kro.kr/health/dashboard', '_blank')">상세보기</span>
         </div>
         <div id="srv-status" class="status-badge">--</div>
 
-        <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
+        <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script> -->
         <script>
             (async function () {
             const el    = document.getElementById('srv-mini');
