--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
             <div class="title">System Engineer · 3년차</div>
             <div class="contact-info">
             <div class="contact-item phone">010-5009-0595</div>
-            <div class="contact-item email">sidml123@naver.com</div>
+            <div class="contact-item email">hyunk1201@gmail.com</div>
             <div class="contact-item blog">
                 <a href="https://myit.tistory.com" target="_blank" rel="noopener" style="color:white; text-decoration:none;">IT Blog</a>
             </div>
