--- a/index.html
+++ b/index.html
@@ -1060,8 +1060,8 @@
                 O4O 매출 57억 증가 / 백업시간 67% 단축 / 200대 서버,네트워크 통합 모니터링 구축.<br>
                 기술로 비즈니스 임팩트를 만듭니다.<br><br>
                 
-                2024년 세계여행 후 Python 기반 자동화 솔루션 개발/판매 (6개월)로 <br>
-                기술 역량 확장 및 비지니스 감각 강화
+                2025년 Python 기반 자동화 솔루션 6종 개발.
+                RPA 운영 경험을 코드로 확장, 기술 역량 확장 및 비즈니스 감각 강화
             </div>
             <div class="experience-badges">
                 <span class="badge badge-abc">ABCmart Korea · 2년</span>
@@ -1171,7 +1171,7 @@
                     <div class="tech-list">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">Git</span>
-                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">HTML/CSS</span>
                     </div>
                 </div>
                 <div class="tech-category">
